// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`release-versions handles a range of mocked create events: create fixture[0] INPUT 1`] = `
{
  "description": null,
  "master_branch": "master",
  "pusher_type": "user",
  "ref": "simple-tag",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "watchers": 0,
    "watchers_count": 0,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[0] OUTPUT 1`] = `undefined`;

exports[`release-versions handles a range of mocked create events: create fixture[1] INPUT 1`] = `
{
  "description": null,
  "master_branch": "master",
  "pusher_type": "user",
  "ref": "simple-tag",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[1] OUTPUT 1`] = `undefined`;

exports[`release-versions handles a range of mocked create events: create fixture[2] INPUT 1`] = `
{
  "description": "Random repository description",
  "master_branch": "master",
  "pusher_type": "user",
  "ref": "simple-tag",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[2] OUTPUT 1`] = `undefined`;

exports[`release-versions handles a range of mocked create events: create fixture[3] INPUT 1`] = `
{
  "description": null,
  "installation": {
    "id": 1,
    "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uMQ==",
  },
  "master_branch": "master",
  "pusher_type": "user",
  "ref": "simple-tag",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[3] OUTPUT 1`] = `undefined`;

exports[`release-versions handles a range of mocked create events: create fixture[4] INPUT 1`] = `
{
  "description": null,
  "master_branch": "master",
  "organization": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/38302899?v=4",
    "description": "",
    "events_url": "https://api.github.com/orgs/Octocoders/events",
    "hooks_url": "https://api.github.com/orgs/Octocoders/hooks",
    "id": 38302899,
    "issues_url": "https://api.github.com/orgs/Octocoders/issues",
    "login": "Octocoders",
    "members_url": "https://api.github.com/orgs/Octocoders/members{/member}",
    "node_id": "MDEyOk9yZ2FuaXphdGlvbjM4MzAyODk5",
    "public_members_url": "https://api.github.com/orgs/Octocoders/public_members{/member}",
    "repos_url": "https://api.github.com/orgs/Octocoders/repos",
    "url": "https://api.github.com/orgs/Octocoders",
  },
  "pusher_type": "user",
  "ref": "simple-tag",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[4] OUTPUT 1`] = `undefined`;

exports[`release-versions handles a range of mocked create events: create fixture[5] INPUT 1`] = `
{
  "description": null,
  "master_branch": "master",
  "pusher_type": "user",
  "ref": "v1.2.3",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "watchers": 0,
    "watchers_count": 0,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[5] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "metric_signature": "release-versions",
    "output": {
      "release_version": {
        "build": [],
        "major": 1,
        "minor": 2,
        "patch": 3,
        "prerelease": [],
        "raw": "1.2.3",
        "version": "1.2.3",
      },
    },
    "owner": "Codertocat",
    "repo": "Hello-World",
    "status": "success",
    "trigger_event_signature": "create",
  },
]
`;

exports[`release-versions handles a range of mocked create events: create fixture[6] INPUT 1`] = `
{
  "description": null,
  "master_branch": "master",
  "pusher_type": "user",
  "ref": "v1.2.3",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[6] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "metric_signature": "release-versions",
    "output": {
      "release_version": {
        "build": [],
        "major": 1,
        "minor": 2,
        "patch": 3,
        "prerelease": [],
        "raw": "1.2.3",
        "version": "1.2.3",
      },
    },
    "owner": "Codertocat",
    "repo": "Hello-World",
    "status": "success",
    "trigger_event_signature": "create",
  },
]
`;

exports[`release-versions handles a range of mocked create events: create fixture[7] INPUT 1`] = `
{
  "description": "Random repository description",
  "master_branch": "master",
  "pusher_type": "user",
  "ref": "v1.2.3",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[7] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "metric_signature": "release-versions",
    "output": {
      "release_version": {
        "build": [],
        "major": 1,
        "minor": 2,
        "patch": 3,
        "prerelease": [],
        "raw": "1.2.3",
        "version": "1.2.3",
      },
    },
    "owner": "Codertocat",
    "repo": "Hello-World",
    "status": "success",
    "trigger_event_signature": "create",
  },
]
`;

exports[`release-versions handles a range of mocked create events: create fixture[8] INPUT 1`] = `
{
  "description": null,
  "installation": {
    "id": 1,
    "node_id": "MDIzOkludGVncmF0aW9uSW5zdGFsbGF0aW9uMQ==",
  },
  "master_branch": "master",
  "pusher_type": "user",
  "ref": "v1.2.3",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[8] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "metric_signature": "release-versions",
    "output": {
      "release_version": {
        "build": [],
        "major": 1,
        "minor": 2,
        "patch": 3,
        "prerelease": [],
        "raw": "1.2.3",
        "version": "1.2.3",
      },
    },
    "owner": "Codertocat",
    "repo": "Hello-World",
    "status": "success",
    "trigger_event_signature": "create",
  },
]
`;

exports[`release-versions handles a range of mocked create events: create fixture[9] INPUT 1`] = `
{
  "description": null,
  "master_branch": "master",
  "organization": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/38302899?v=4",
    "description": "",
    "events_url": "https://api.github.com/orgs/Octocoders/events",
    "hooks_url": "https://api.github.com/orgs/Octocoders/hooks",
    "id": 38302899,
    "issues_url": "https://api.github.com/orgs/Octocoders/issues",
    "login": "Octocoders",
    "members_url": "https://api.github.com/orgs/Octocoders/members{/member}",
    "node_id": "MDEyOk9yZ2FuaXphdGlvbjM4MzAyODk5",
    "public_members_url": "https://api.github.com/orgs/Octocoders/public_members{/member}",
    "repos_url": "https://api.github.com/orgs/Octocoders/repos",
    "url": "https://api.github.com/orgs/Octocoders",
  },
  "pusher_type": "user",
  "ref": "v1.2.3",
  "ref_type": "tag",
  "repository": {
    "archive_url": "https://api.github.com/repos/Codertocat/Hello-World/{archive_format}{/ref}",
    "archived": false,
    "assignees_url": "https://api.github.com/repos/Codertocat/Hello-World/assignees{/user}",
    "blobs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/blobs{/sha}",
    "branches_url": "https://api.github.com/repos/Codertocat/Hello-World/branches{/branch}",
    "clone_url": "https://github.com/Codertocat/Hello-World.git",
    "collaborators_url": "https://api.github.com/repos/Codertocat/Hello-World/collaborators{/collaborator}",
    "comments_url": "https://api.github.com/repos/Codertocat/Hello-World/comments{/number}",
    "commits_url": "https://api.github.com/repos/Codertocat/Hello-World/commits{/sha}",
    "compare_url": "https://api.github.com/repos/Codertocat/Hello-World/compare/{base}...{head}",
    "contents_url": "https://api.github.com/repos/Codertocat/Hello-World/contents/{+path}",
    "contributors_url": "https://api.github.com/repos/Codertocat/Hello-World/contributors",
    "created_at": "2019-05-15T15:19:25Z",
    "default_branch": "master",
    "deployments_url": "https://api.github.com/repos/Codertocat/Hello-World/deployments",
    "description": null,
    "disabled": false,
    "downloads_url": "https://api.github.com/repos/Codertocat/Hello-World/downloads",
    "events_url": "https://api.github.com/repos/Codertocat/Hello-World/events",
    "fork": false,
    "forks": 1,
    "forks_count": 1,
    "forks_url": "https://api.github.com/repos/Codertocat/Hello-World/forks",
    "full_name": "Codertocat/Hello-World",
    "git_commits_url": "https://api.github.com/repos/Codertocat/Hello-World/git/commits{/sha}",
    "git_refs_url": "https://api.github.com/repos/Codertocat/Hello-World/git/refs{/sha}",
    "git_tags_url": "https://api.github.com/repos/Codertocat/Hello-World/git/tags{/sha}",
    "git_url": "git://github.com/Codertocat/Hello-World.git",
    "has_downloads": true,
    "has_issues": true,
    "has_pages": true,
    "has_projects": true,
    "has_wiki": true,
    "homepage": null,
    "hooks_url": "https://api.github.com/repos/Codertocat/Hello-World/hooks",
    "html_url": "https://github.com/Codertocat/Hello-World",
    "id": 186853002,
    "is_template": false,
    "issue_comment_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/comments{/number}",
    "issue_events_url": "https://api.github.com/repos/Codertocat/Hello-World/issues/events{/number}",
    "issues_url": "https://api.github.com/repos/Codertocat/Hello-World/issues{/number}",
    "keys_url": "https://api.github.com/repos/Codertocat/Hello-World/keys{/key_id}",
    "labels_url": "https://api.github.com/repos/Codertocat/Hello-World/labels{/name}",
    "language": "Ruby",
    "languages_url": "https://api.github.com/repos/Codertocat/Hello-World/languages",
    "license": null,
    "merges_url": "https://api.github.com/repos/Codertocat/Hello-World/merges",
    "milestones_url": "https://api.github.com/repos/Codertocat/Hello-World/milestones{/number}",
    "mirror_url": null,
    "name": "Hello-World",
    "node_id": "MDEwOlJlcG9zaXRvcnkxODY4NTMwMDI=",
    "notifications_url": "https://api.github.com/repos/Codertocat/Hello-World/notifications{?since,all,participating}",
    "open_issues": 2,
    "open_issues_count": 2,
    "owner": {
      "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
      "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
      "followers_url": "https://api.github.com/users/Codertocat/followers",
      "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
      "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/Codertocat",
      "id": 21031067,
      "login": "Codertocat",
      "node_id": "MDQ6VXNlcjIxMDMxMDY3",
      "organizations_url": "https://api.github.com/users/Codertocat/orgs",
      "received_events_url": "https://api.github.com/users/Codertocat/received_events",
      "repos_url": "https://api.github.com/users/Codertocat/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/Codertocat",
    },
    "private": false,
    "pulls_url": "https://api.github.com/repos/Codertocat/Hello-World/pulls{/number}",
    "pushed_at": "2019-05-15T15:20:56Z",
    "releases_url": "https://api.github.com/repos/Codertocat/Hello-World/releases{/id}",
    "size": 0,
    "ssh_url": "git@github.com:Codertocat/Hello-World.git",
    "stargazers_count": 0,
    "stargazers_url": "https://api.github.com/repos/Codertocat/Hello-World/stargazers",
    "statuses_url": "https://api.github.com/repos/Codertocat/Hello-World/statuses/{sha}",
    "subscribers_url": "https://api.github.com/repos/Codertocat/Hello-World/subscribers",
    "subscription_url": "https://api.github.com/repos/Codertocat/Hello-World/subscription",
    "svn_url": "https://github.com/Codertocat/Hello-World",
    "tags_url": "https://api.github.com/repos/Codertocat/Hello-World/tags",
    "teams_url": "https://api.github.com/repos/Codertocat/Hello-World/teams",
    "topics": [],
    "trees_url": "https://api.github.com/repos/Codertocat/Hello-World/git/trees{/sha}",
    "updated_at": "2019-05-15T15:20:41Z",
    "url": "https://api.github.com/repos/Codertocat/Hello-World",
    "visibility": "public",
    "watchers": 0,
    "watchers_count": 0,
    "web_commit_signoff_required": false,
  },
  "sender": {
    "avatar_url": "https://avatars1.githubusercontent.com/u/21031067?v=4",
    "events_url": "https://api.github.com/users/Codertocat/events{/privacy}",
    "followers_url": "https://api.github.com/users/Codertocat/followers",
    "following_url": "https://api.github.com/users/Codertocat/following{/other_user}",
    "gists_url": "https://api.github.com/users/Codertocat/gists{/gist_id}",
    "gravatar_id": "",
    "html_url": "https://github.com/Codertocat",
    "id": 21031067,
    "login": "Codertocat",
    "node_id": "MDQ6VXNlcjIxMDMxMDY3",
    "organizations_url": "https://api.github.com/users/Codertocat/orgs",
    "received_events_url": "https://api.github.com/users/Codertocat/received_events",
    "repos_url": "https://api.github.com/users/Codertocat/repos",
    "site_admin": false,
    "starred_url": "https://api.github.com/users/Codertocat/starred{/owner}{/repo}",
    "subscriptions_url": "https://api.github.com/users/Codertocat/subscriptions",
    "type": "User",
    "url": "https://api.github.com/users/Codertocat",
  },
}
`;

exports[`release-versions handles a range of mocked create events: create fixture[9] OUTPUT 1`] = `
[
  {
    "created_at": 1700000000000,
    "metric_signature": "release-versions",
    "output": {
      "release_version": {
        "build": [],
        "major": 1,
        "minor": 2,
        "patch": 3,
        "prerelease": [],
        "raw": "1.2.3",
        "version": "1.2.3",
      },
    },
    "owner": "Codertocat",
    "repo": "Hello-World",
    "status": "success",
    "trigger_event_signature": "create",
  },
]
`;
